# ghist

./: AGENTS.md  README.md  pyproject.toml
ghist/: __init__.py  app.py  git_data.py  ui.py
githistory_tui/: app.py  git_data.py  ui.py
src/githistory_tui/: __init__.py  app.py  git_data.py  ui.py
