[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ghist"
version = "0.1.0"
description = "A Textual-based terminal UI for browsing git history."
authors = [{name = "pomber remake contributors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["textual>=0.44"]

[project.scripts]
ghist = "ghist.app:main"

[tool.setuptools.packages.find]
where = ["."]
