[project]
name = "ghist"
version = "0.4.2"
description = "A Textual-based terminal UI for browsing git history."
authors = [{name = "pomber remake contributors"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.44"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
ghist = "ghist.app:main"

[tool.setuptools.packages.find]
where = ["."]
